--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
     <title>WCLibC Test</title>
   </head>
   <body dir="ltr">
-    <canvas width="1024" height="1024" id="canvas" />
+    <canvas width="1024" height="1024" id="canvas"><canvas/>
     <img src="testimg.png" id="img" />
     <button>Blur</button>
   </body
