--- a/test.html
+++ b/test.html
@@ -9,5 +9,6 @@
     <canvas width="1024" height="1024" id="canvas"><canvas/>
     <img src="testimg.png" id="img" />
     <button>Blur</button>
+       <script src="./wclibc-test-wasm32.js"></script>
   </body
 </html>
