--- a/test.html
+++ b/test.html
@@ -6,9 +6,9 @@
     <title>WCLibC Test</title>
   </head>
   <body dir="ltr">
-    <canvas width="1024" height="1024" id="canvas"><canvas/>
+    <canvas width="1024" height="1024" id="canvas"></canvas>
     <img src="testimg.png" id="img" />
     <button>Blur</button>
-       <script src="./wclibc-test-wasm32.js"></script>
-  </body
+     <script src="./wclibc-test-wasm32.js"></script>
+   </body>
 </html>
