--- a/test.html
+++ b/test.html
@@ -7,7 +7,7 @@
   </head>
   <body dir="ltr">
     <canvas width="1024" height="1024" id="canvas"></canvas>
-    <img src="testimg.png" id="img" />
+    <img src="https://picsum.photos/seed/picsum/1024/1024" id="img" />
     <button>Blur</button>
      <script src="./wclibc-test-wasm32.js"></script>
    </body>
